# dumpsheet

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  .secrets.toml.template  Dockerfile  README.md  __init__.py  conftest.py  deploy_lambda_container.sh  deploy_saml.sh  email_utils.py  example-context-and-event.py  example-email.mime  networking-dump.py  openai_utils.py  package-lock.json  package.json  requirements.txt  scrape_my_linkedin.py  setup.cfg  setup.py  tailwind.config.js  transform_and_search.py  viktorio-deck.py  voxana-d86eb11b9a5c.json
app/: __init__.py  app.py  aws_utils.py  config.py  contacts_dump.py  datashare.py  dynamodb.py  email_template.py  email_utils.py  emails.py  entry.sh  flashcards_template.py  food_dump.py  form.py  form_library.py  forms.py  generate_flashcards.py  gsheets.py  hubspot.py  hubspot_client.py  hubspot_dump.py  hubspot_gpt.py  hubspot_models.py  hubspot_quickstart.py  job.py  networking_dump.py  openai_client.py  openai_utils.py  requirements.txt  search.py  storage_utils.py  supabase_client.py  test_utils.py  twillio_client.py  utils.py
assets/: error.html  index.html  index.html.template
backend/: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  deploy_lambda_container.sh  deploy_saml.sh  output.html
chrome_webscraper/: Dockerfile  extract_profile.py  scraper.py  shorten_html_structure.py
common/: aws_utils.py  config.py  openai_client.py  storage_utils.py  supabase_client.py  test_utils.py  twillio_client.py  utils.py
components/: Banner.tsx  TodoList.tsx  (+4 more)
(+200 files in other folders)
