[flake8]
ignore = E203,F403,F405,W503
max-line-length = 120

[isort]
profile = black
# The flag is additive; it just adds the functionality to remove unused imports
# while keeping all other sorting behaviors intact.
remove_only = True

[metadata]
name = backend
version = 0.1

[options]
packages = find: